tests/negative/neg_pr1162_removed_aliased.safe
package Neg_PR1162_Removed_Aliased

   Value : aliased Integer = 1;
